--- a/flask-web/template/files.html
+++ b/flask-web/template/files.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-    <title>For loop in Flask</title>
+    <title>List Files</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Immanuel (Dev)">
+    <link rel="shortcut icon" type="image/png" href="https://immanuel.co/favicon.ico">
 </head>
 <body>
 
