--- a/flask-web/template/upload.html
+++ b/flask-web/template/upload.html
@@ -1,8 +1,11 @@
 <html>
 <head>
     <title>Resume Extracted - by ARK (Immanuel)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Immanuel (Dev)">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="https://immanuel.co/favicon.ico">
     <style>
         html,
         body {
